--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .game-board {
-width: 80%;
-height: 500px;
-border: 1px solid #333;
-margin: 0 auto;
-position: relative;
-overflow: hidden;
+    width: 100%;
+    height: 500px;
+    border-bottom: 15px solid rgb(35, 160, 35);
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(#87ceeb, #e0f6ff);
 }
 
 .pipe {
@@ -30,12 +31,18 @@ overflow: hidden;
     animation: jump 500ms ease-out;
 }
 
+.clouds {
+    position: absolute;
+    width: 400px;
+    animation: clouds-animation 20s infinite linear;
+}
+
 @keyframes pipe-animation {
     from {
         right: -80px;
     }
 
-    to{
+    to {
         right: 100%;
     }
 }
@@ -61,4 +68,14 @@ overflow: hidden;
         bottom: 0;
     }
 
+}
+
+@keyframes clouds-animation {
+    from {
+        right: -400px;
+    }
+
+    to {
+        right: 100%;
+    }
 }
